Fix horizontal scrollbar on some iPad views

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.3.2rc3 */
+   1.3.2 */
 
 /* CSS variables */
 :root {
@@ -2424,7 +2424,7 @@ body.embed .button.logo-button:hover,
 }
 
 /* iPad etc. */
-@media (max-width: 1175px) {
+@media (max-width: 1174px) {
   .layout-single-column .detailed-status__action-bar .icon-button::after,
   .layout-single-column .status__action-bar .icon-button::after,
   .layout-single-column .detailed-status__action-bar-dropdown .icon-button::after {
@@ -2438,16 +2438,28 @@ body.embed .button.logo-button:hover,
     background-color: transparent;
     padding: 0;
   }
+
+  .layout-single-column .columns-area__panels__main {
+    width: calc(100% - var(--width-side-panel));
+  }
 }
 
 /* In-between breakpoint */
-@media (min-width: 889px) and (max-width: 1175px) {
+@media (min-width: 889px) and (max-width: 1174px) {
+  .layout-single-column .columns-area__panels__main > div {
+    border-right: 0;
+  }
+
   .layout-single-column .ui__header,
   .layout-single-column .columns-area__panels__main > div.tabs-bar__wrapper,
   .layout-single-column .tabs-bar__wrapper {
     backdrop-filter: blur(12px);
     background-color: var(--color-bg-75);
     border-color: var(--color-border);
+  }
+
+  .layout-single-column .columns-area__panels {
+    width: calc(100% - 1px);
   }
 
   .layout-single-column .columns-area__panels__main > .tabs-bar__wrapper {
